# _wasApp

./: .gitignore  test.txt  update_to_proj.sh
example_1/: CMakeLists.txt  build.sh  example_1  example_1.c
example_1/file/: user_data.ini
example_1/include/: func.h  log_info.h  user_data_api.h  wasApp.h
src/: CMakeLists.txt  README.MD  build.sh  func.c  func.h  user_data_api.c  user_data_api.h
src/output/: wasApp.h
